--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
     <!-- Custom Script -->
     <script src="./script.js"></script>
 
-    
-<script src="//code.tidio.co/hj9fb0i0htr1bovbwjotqnl3ssa9wjyt.js" async></script>
+    <!-- tidio live ai chat bot script -->
+    <script src="//code.tidio.co/hj9fb0i0htr1bovbwjotqnl3ssa9wjyt.js" async></script>
     
   </body>
 </html>
